--- a/packages/piny-forest/tsconfig.json
+++ b/packages/piny-forest/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
     "rootDir": "./src",
-    "target": "es6",
+    "module": "esnext",
+    "target": "es2019",
     "moduleResolution": "node",
     "strict": true,
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "es2019"],
     "jsx": "react-jsx",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "declaration": true
   },
   "include": ["./src"],
   "exclude": ["node_modules", "src/**/*.test.tsx"]
