--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "trailingComma": "es5",
     "printWidth": 80
   },
-  "dependencies": {
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0"
-  },
   "devDependencies": {
     "@emotion/jest": "^11.1.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.5",
+    "@size-limit/preset-small-lib": "^4.9.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@types/jest": "^26.0.20",
@@ -36,6 +35,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-live": "^2.2.3",
+    "size-limit": "^4.9.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
