--- a/packages/piny-forest/package.json
+++ b/packages/piny-forest/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "rm -rf out && tsc --outDir out",
     "test": "jest",
+    "size": "size-limit",
     "release": "np",
     "preversion": "npm run build"
   },
@@ -23,7 +24,14 @@
       "@testing-library/jest-dom"
     ]
   },
-  "dependencies": {
+  "size-limit": [
+    {
+      "path": "./out/index.js",
+      "limit": "5 KB"
+    }
+  ],
+  "peerDependencies": {
+    "react": "^17.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0"
   }
