--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": "true",
   "workspaces": [
     "packages/piny-forest",
-    "packages/piny-forest-docs"
+    "packages/piny-forest-docs",
+    "packages/piny-theme"
   ],
   "prettier": {
     "arrowParens": "always",
@@ -18,7 +19,7 @@
     "@emotion/styled": "^11.0.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^10.0.5",
+    "@next/mdx": "^10.0.6",
     "@size-limit/preset-small-lib": "^4.9.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -27,16 +28,17 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/testing-library__jest-dom": "^5.9.5",
+    "@types/webpack-env": "^1.16.0",
     "csstype": "^3.0.6",
     "jest": "^26.6.3",
-    "next": "^10.0.5",
+    "next": "^10.0.6",
     "next-transpile-modules": "^6.1.0",
     "np": "^7.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-live": "^2.2.3",
     "size-limit": "^4.9.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.0",
+    "typescript": "^4.2.0-beta"
   }
 }
