--- a/packages/piny-forest-docs/tsconfig.json
+++ b/packages/piny-forest-docs/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../piny-forest/tsconfig",
   "compilerOptions": {
+    "rootDir": ".",
     "target": "es6",
     "module": "esnext",
     "jsx": "preserve",
