--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
     "module": "esnext",
     "target": "es2019",
     "moduleResolution": "node",
     "strict": true,
     "lib": ["dom", "dom.iterable", "es2019"],
+    "jsx": "react-jsx",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
     "declaration": true
   },
-  "include": ["./src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.test.tsx"]
 }
