--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.1",
     "react-live": "^2.2.3",
     "size-limit": "^4.9.2",
+    "slugify": "^1.4.6",
     "ts-jest": "^26.5.0",
     "typescript": "^4.2.0-beta"
   }
