--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-live": "^2.2.3",
+    "serve": "^11.3.2",
     "size-limit": "^4.9.2",
     "slugify": "^1.4.6",
     "ts-jest": "^26.5.0",
