--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "workspaces": [
     "packages/forest",
-    "packages/pss"
+    "packages/pss",
+    "packages/website"
   ],
   "prettier": {
     "arrowParens": "always",
@@ -13,39 +14,39 @@
     "printWidth": 80
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.13",
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
-    "@emotion/babel-plugin": "^11.1.2",
-    "@emotion/jest": "^11.1.0",
+    "@babel/preset-typescript": "^7.12.16",
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/jest": "^11.2.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^10.0.6",
+    "@next/mdx": "^10.0.7",
     "@size-limit/preset-small-lib": "^4.9.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@types/jest": "^26.0.20",
     "@types/mdx-js__react": "^1.5.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@types/webpack-env": "^1.16.0",
     "csstype": "^3.0.6",
     "jest": "^26.6.3",
-    "next": "^10.0.6",
-    "next-transpile-modules": "^6.1.0",
-    "np": "^7.2.0",
+    "next": "^10.0.7",
+    "next-transpile-modules": "^6.3.0",
+    "np": "^7.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-live": "^2.2.3",
     "serve": "^11.3.2",
     "size-limit": "^4.9.2",
     "slugify": "^1.4.6",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.2.0-beta"
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.2.1-rc"
   }
 }
