--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "workspaces": [
     "packages/forest",
+    "packages/theme",
     "packages/pss",
     "packages/website"
   ],
@@ -14,39 +15,39 @@
     "printWidth": 80
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.1",
-    "@babel/preset-env": "^7.13.5",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@emotion/babel-plugin": "^11.2.0",
-    "@emotion/jest": "^11.2.0",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
+    "@emotion/jest": "^11.2.1",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^10.0.7",
-    "@size-limit/preset-small-lib": "^4.9.2",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@types/jest": "^26.0.20",
+    "@next/mdx": "^10.1.3",
+    "@size-limit/preset-small-lib": "^4.10.2",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.22",
     "@types/mdx-js__react": "^1.5.3",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@types/webpack-env": "^1.16.0",
-    "csstype": "^3.0.6",
+    "csstype": "^3.0.7",
     "jest": "^26.6.3",
-    "next": "^10.0.7",
-    "next-transpile-modules": "^6.3.0",
+    "next": "^10.1.3",
+    "next-transpile-modules": "^6.4.0",
     "np": "^7.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-live": "^2.2.3",
     "serve": "^11.3.2",
-    "size-limit": "^4.9.2",
-    "slugify": "^1.4.7",
-    "ts-jest": "^26.5.2",
-    "typescript": "^4.2.2"
+    "size-limit": "^4.10.2",
+    "slugify": "^1.5.0",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3"
   }
 }
