--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -17,5 +17,5 @@
     "resolveJsonModule": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "env.d.ts", "**/*.ts", "**/*.tsx"]
 }
